tests/errors/if-for/for.c
{
    for(int a = 6; a < 8; a++)
    {
        continue;
    }
    for(;;)
    {
        break;
    }
}
